--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html{
   height: 100%;
+  font-size: 62.5%;
 }
 body {
   margin: 0;
@@ -9,7 +10,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 10px;
 }
 
 #root{
