--- a/src/components/MainTable/MainTable.module.scss
+++ b/src/components/MainTable/MainTable.module.scss
@@ -1,5 +1,9 @@
+$color-background: lightcyan;
+$color-bad: red;
+$color-good: darkgreen;
+
 .wrapper{
-    background-color: lightcyan;
+    background-color: $color-background
 }
 .countryName{
     font-size: 1.7rem;
@@ -23,10 +27,10 @@
     grid-template-columns: repeat(2,1fr);
 }
 .table_element:nth-child(3) .table_data, .table_element:nth-child(4) .table_data{
-    color: red;
+    color: $color-bad;
 }
 .table_element:nth-child(5) .table_data, .table_element:nth-child(6) .table_data{
-    color: forestgreen;
+    color:$color-good;
 }
 
 .switchSection{
