--- a/src/components/Graph/Graph.module.css
+++ b/src/components/Graph/Graph.module.css
@@ -1,18 +1,16 @@
 .container {
   width: 100%;
-  height: 500px;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .spiner {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   background-image: url(./Spinner-1s-200px.svg);
   background-repeat: no-repeat;
-  background-size: 100px;
+  background-size: 50px;
 }
 .graph {
-  width: 100%;
-  height: 500px;
 }
