--- a/src/components/Graph/Graph.module.css
+++ b/src/components/Graph/Graph.module.css
@@ -8,7 +8,7 @@
 .spiner {
   width: 50px;
   height: 50px;
-  background-image: url(./Spinner-1s-200px.svg);
+  background-image: url(../../assets/image/Spinner.svg);
   background-repeat: no-repeat;
   background-size: 50px;
 }
