--- a/src/App.module.css
+++ b/src/App.module.css
@@ -35,9 +35,13 @@
 }
 
 .graph{
-  grid-area: graph;
+    grid-area: graph;
+    position: relative;
+    padding-top: 10px;
+    background-color: #1e2128;
 }
 
 .footer {
   grid-area: footer;
+
 }
