--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,6 @@
-:root{
-  --grid-areas:
-  "header header search"
-  "mainList map mainTable"
-  "mainList map graph"
-  "footer footer footer"
+:root {
+  --grid-areas: "header header search" "mainList map mainTable"
+    "mainList map graph" "footer footer footer";
 }
 
 .app {
@@ -35,14 +32,13 @@
   background-color: #1e2128;
 }
 
-.graph{
-    grid-area: graph;
-    position: relative;
-    padding-top: 10px;
-    background-color: #1e2128;
+.graph {
+  grid-area: graph;
+  position: relative;
+  padding-top: 10px;
+  background-color: #1e2128;
 }
 
 .footer {
   grid-area: footer;
-
 }
