Faet/create main list (#16)
* feat: add MainList

* feat: added getting the country by clicking the map

* fix: renamed hooks

Co-authored-by: cup0ra <cup0ra@users.noreply.github.com>

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,6 @@
-:root{
-  --grid-areas:
-  "header header search"
-  "mainList map mainTable"
-  "mainList map graph"
-  "footer footer footer"
+:root {
+  --grid-areas: "header header search" "mainList map mainTable"
+    "mainList map graph" "footer footer footer";
 }
 
 .app {
@@ -32,16 +29,16 @@
 
 .mainList {
   grid-area: mainList;
+  background-color: #1e2128;
 }
 
-.graph{
-    grid-area: graph;
-    position: relative;
-    padding-top: 10px;
-    background-color: #1e2128;
+.graph {
+  grid-area: graph;
+  position: relative;
+  padding-top: 10px;
+  background-color: #1e2128;
 }
 
 .footer {
   grid-area: footer;
-
 }
