feat: add open a fullscreen size option

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -21,15 +21,18 @@
 
 .map {
   grid-area: map;
+  position: relative;
 }
 
 .mainTable {
   grid-area: mainTable;
+  position: relative;
 }
 
 .mainList {
   grid-area: mainList;
   background-color: #1e2128;
+  position: relative;
 }
 
 .graph {
