--- a/src/components/Graph/Graph.module.scss
+++ b/src/components/Graph/Graph.module.scss
@@ -95,3 +95,31 @@ $white: #fff;
     display: flex;
   }
 }
+
+.btn_fullscreen {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: inherit;
+  border: none;
+  width: 30px;
+  height: 30px;
+  outline: none;
+  cursor: pointer;
+}
+.btn_fullscreen img {
+  width: 100%;
+}
+
+.fullscreen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 100;
+  height : 100%;
+  background-color: #1e2128;
+  overflow: hidden;
+}
