--- a/src/components/Graph/Graph.module.scss
+++ b/src/components/Graph/Graph.module.scss
@@ -4,13 +4,19 @@ $border-color: #3b3b3b;
 $white: #fff;
 
 .container {
+  position: relative;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 20px);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
 }
-
+.message {
+  color: $white;
+  margin: auto;
+  text-align: center;
+  font-size: 16px;
+}
 .graph {
   background-color: $background-colour;
 }
@@ -58,6 +64,8 @@ $white: #fff;
     justify-content: space-between;
     .prev,
     .next {
+      border: none;
+      outline: none;
       width: 10%;
       height: 19px;
       background-color: $background-colour;
