--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,4 +1,7 @@
 $background-colour: #1e2128;
+.hidden {
+  display: none !important;
+}
 .container {
   width: 100%;
   height: 100%;
@@ -6,8 +9,27 @@ $background-colour: #1e2128;
   justify-content: center;
   align-items: center;
   background-color: $background-colour;
+
+  .block {
+    display: block;
+    transition: 1.5s;
+  }
   .wrapper {
     position: relative;
+    .keybord {
+      position: absolute;
+      width: 25px;
+      height: 40px;
+      top: 0;
+      right: 5px;
+      z-index: 10;
+      color: #3b3b3b;
+      transition: 0.5s;
+      &:hover {
+        color: #1b1b1b;
+      }
+      cursor: pointer;
+    }
     &::after {
       content: "";
       position: absolute;
@@ -26,7 +48,7 @@ $background-colour: #1e2128;
     .input {
       border: none;
       outline: none;
-      padding: 5px 5px 5px 30px;
+      padding: 5px 30px;
       border-radius: 5px;
       position: relative;
 
