--- a/src/components/MainList/MainList.module.scss
+++ b/src/components/MainList/MainList.module.scss
@@ -52,3 +52,15 @@ $white: #fff;
     border-radius: 3px;
   }
 }
+
+@media(max-width: 1050px) {
+  .containerCountry {
+    max-height: 755px;
+  }
+}
+
+@media(max-width: 700px) {
+  .containerCountry {
+    max-height: 400px;
+  }
+}
