--- a/src/components/Graph/Graph.module.scss
+++ b/src/components/Graph/Graph.module.scss
@@ -7,6 +7,7 @@ $white: #fff;
   position: relative;
   width: 100%;
   height: calc(100% - 20px);
+  min-height: 148px;
   display: flex;
   justify-content: center;
   align-items: stretch;
@@ -127,7 +128,7 @@ $white: #fff;
   bottom: 0;
   width: 100%;
   z-index: 100;
-  height : 100%;
+  height: 100%;
   background-color: #1e2128;
   overflow: hidden;
 }
