--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ html {
 body {
   margin: 0;
   height: 100%;
+  background-color: #1e2128;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
