--- a/src/components/Graph/Graph.module.scss
+++ b/src/components/Graph/Graph.module.scss
@@ -121,14 +121,14 @@ $white: #fff;
 }
 
 .fullscreen {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   width: 100%;
   z-index: 100;
-  height: 100%;
-  background-color: #1e2128;
+  height: 98%;
+  background-color: $background-colour;
   overflow: hidden;
 }
