--- a/src/components/MainList/MainList.module.scss
+++ b/src/components/MainList/MainList.module.scss
@@ -27,7 +27,7 @@ $white: #fff;
 .containerCountry {
   overflow: hidden;
   overflow-y: scroll;
-  height: calc(100% - 80px);
+  max-height: 630px;
   color: $white;
 
   .item {
@@ -62,6 +62,43 @@ $white: #fff;
     background: rgba(255, 255, 255, 0.315);
     border-radius: 3px;
   }
+}
+
+.btn_fullscreen {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: inherit;
+  border: none;
+  width: 30px;
+  height: 30px;
+  outline: none;
+  cursor: pointer;
+}
+.btn_fullscreen img {
+  width: 100%;
+}
+
+.fullscreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 100;
+  height: 100%;
+  background-color: $background-colour;
+  overflow: hidden;
+}
+.list_wrap {
+  height: 100%;
+}
+
+.fullscreen .list_wrap {
+  background-color: $background-colour;
+  position: absolute;
+  width: 100%;
 }
 
 @media(max-width: 1050px) {
