--- a/src/components/MainList/MainList.module.scss
+++ b/src/components/MainList/MainList.module.scss
@@ -27,7 +27,7 @@ $white: #fff;
 .containerCountry {
   overflow: hidden;
   overflow-y: scroll;
-  height: calc(100% - 80px);
+  max-height: 630px;
   color: $white;
 
   .item {
@@ -99,4 +99,16 @@ $white: #fff;
   background-color: $background-colour;
   position: absolute;
   width: 100%;
+}
+
+@media(max-width: 1050px) {
+  .containerCountry {
+    max-height: 755px;
+  }
+}
+
+@media(max-width: 700px) {
+  .containerCountry {
+    max-height: 400px;
+  }
 }
