feat: change grid

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,55 +1,44 @@
 .app {
   display: grid;
-  grid-template-rows: 2fr 1fr 20fr 2fr;
   grid-template-columns: 2fr 6fr 3fr;
-  height: 100%;
+  grid-template-rows: 2fr 2fr 10fr 10fr 2fr;
+  gap: 0px 0px;
+  grid-template-areas: 
+    "header header header"
+    "search map mainTable"
+    "mainList map mainTable"
+    "mainList map graph"
+    "footer footer footer";
 }
-
-.header {
-  grid-area: 1 / 1 / 2 / 4;
+.header { 
+  grid-area: header; 
 }
-
-.search {
-  grid-area: 2 / 1 / 3 / 2;
-  padding: 10px 0;
+.search { 
+  grid-area: search; 
+  padding: 10px 0; 
 }
-
-.map {
-  grid-area: 2 / 2 / 4 / 3;
-  min-height: 500px;
-  position: relative;
-}
-
-.mainTableWrap {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 4fr 3fr;
-  grid-template-areas:
-    "mainTable"
-    "graph";
-  grid-area: 2 / 3 / 4 / 4;
-}
-
-.mainTable {
-  grid-area: mainTable;
-  position: relative;
-}
-
-.mainList {
-  grid-area: 3 / 1 / 4 / 2;
+.mainList { 
+  grid-area: mainList;  
   background-color: #1e2128;
   position: relative;
 }
-
-.graph {
-  grid-area: graph;
+.map { 
+  grid-area: map; 
+  min-height: 500px;
+  position: relative; 
+}
+.mainTable { 
+  grid-area: mainTable; 
+  position: relative;
+}
+.graph { 
+  grid-area: graph; 
   position: relative;
   padding-top: 10px;
   background-color: #1e2128;
 }
-
-.footer {
-  grid-area: 4 / 1 / 5 / 4;
+.footer { 
+  grid-area: footer; 
 }
 
 @media(max-width: 1500px) {
@@ -59,38 +48,16 @@
 }
 
 @media(max-width: 1050px) {
-  .app{
+  .app {
     grid-template-columns: 2fr 6fr;
-    grid-template-rows: 2fr 2fr 20fr 15fr 2fr;
-  }
-  .header {
-    grid-area: 1 / 1 / 2 / 4;
-  }
-  
-  .search {
-    grid-area: 2 / 1 / 3 / 2;
-  }
-  
-  .map {
-    grid-area: 2 / 2 / 4 / 3;
-  }
-
-  .mainTableWrap {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr;
-    gap: 0px 0px;
-    grid-template-areas:
-      "mainTable graph";
-    grid-area: 4 / 1 / 5 / 3;
-  }
-  
-  .mainList {
-    grid-area: 3 / 1 / 4 / 2;
-  }
-  
-  .footer {
-    grid-area: 5 / 1 / 6 / 3;
+    grid-template-rows: 2fr 2fr 10fr 10fr 10fr 2fr;
+    grid-template-areas: 
+      "header header"
+      "search map"
+      "mainList map"
+      "mainList map"
+      "mainTable graph"
+      "footer footer";
   }
 }
 
@@ -98,13 +65,14 @@
   .app {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 2fr 15fr 20fr 20fr 2fr;
+    grid-template-rows: 2fr 2fr 15fr 20fr 10fr 10fr 2fr;
     grid-template-areas:
       "header"
       "search"
       "mainList"
       "map"
-      "mainTableWrap"
+      "mainTable"
+      "graph"
       "footer";
   }
   .header { 
@@ -118,14 +86,6 @@
   }
   .map { 
     grid-area: map; 
-  }
-  .mainTableWrap {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:
-      "mainTable"
-      "graph";
-    grid-area: mainTableWrap;
   }
   .mainTable { 
     grid-area: mainTable; 
