fix: moved the search box

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,59 +1,53 @@
 .app {
   display: grid;
   grid-template-columns: 2fr 6fr 3fr;
-  grid-template-rows: 2fr 2fr 10fr 10fr 2fr;
+  grid-template-rows: 1fr 6fr 4fr 1fr;
   gap: 0px 0px;
-  grid-template-areas: 
+  grid-template-areas:
     "header header header"
-    "search map mainTable"
     "mainList map mainTable"
     "mainList map graph"
     "footer footer footer";
 }
-.header { 
-  grid-area: header; 
+.header {
+  grid-area: header;
 }
-.search { 
-  grid-area: search; 
-  padding: 10px 0; 
-}
-.mainList { 
-  grid-area: mainList;  
+.mainList {
+  grid-area: mainList;
   background-color: #1e2128;
   position: relative;
 }
-.map { 
-  grid-area: map; 
+.map {
+  grid-area: map;
   min-height: 500px;
-  position: relative; 
-}
-.mainTable { 
-  grid-area: mainTable; 
   position: relative;
 }
-.graph { 
-  grid-area: graph; 
+.mainTable {
+  grid-area: mainTable;
+  position: relative;
+}
+.graph {
+  grid-area: graph;
   position: relative;
   padding-top: 10px;
   background-color: #1e2128;
 }
-.footer { 
-  grid-area: footer; 
+.footer {
+  grid-area: footer;
 }
 
-@media(max-width: 1500px) {
+@media (max-width: 1299px) {
   .app {
     grid-template-columns: 2fr 8fr 1fr;
   }
 }
 
-@media(max-width: 1050px) {
+@media (max-width: 1050px) {
   .app {
     grid-template-columns: 2fr 6fr;
-    grid-template-rows: 2fr 2fr 10fr 10fr 10fr 2fr;
-    grid-template-areas: 
+    grid-template-rows: 2fr 10fr 10fr 10fr 2fr;
+    grid-template-areas:
       "header header"
-      "search map"
       "mainList map"
       "mainList map"
       "mainTable graph"
@@ -61,39 +55,35 @@
   }
 }
 
-@media(max-width: 700px) {
+@media (max-width: 700px) {
   .app {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 2fr 10fr 20fr 10fr 10fr 2fr;
+    grid-template-rows: 2fr 10fr 20fr 10fr 10fr 2fr;
     grid-template-areas:
       "header"
-      "search"
       "mainList"
       "map"
       "mainTable"
       "graph"
       "footer";
   }
-  .header { 
-    grid-area: header; 
+  .header {
+    grid-area: header;
   }
-  .search { 
-    grid-area: search; 
+  .mainList {
+    grid-area: mainList;
   }
-  .mainList { 
-    grid-area: mainList; 
+  .map {
+    grid-area: map;
   }
-  .map { 
-    grid-area: map; 
+  .mainTable {
+    grid-area: mainTable;
   }
-  .mainTable { 
-    grid-area: mainTable; 
+  .graph {
+    grid-area: graph;
   }
-  .graph { 
-    grid-area: graph; 
-  }
-  .footer { 
-    grid-area: footer; 
+  .footer {
+    grid-area: footer;
   }
 }
