--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -16,6 +16,7 @@ $background-colour: #1e2128;
   }
   .wrapper {
     position: relative;
+    margin: 5px;
     .keybord {
       position: absolute;
       width: 25px;
