--- a/src/components/MainList/MainList.module.scss
+++ b/src/components/MainList/MainList.module.scss
@@ -27,6 +27,7 @@ $white: #fff;
 .containerCountry {
   overflow: hidden;
   overflow-y: scroll;
+  height: calc(100% - 115px);
   max-height: 630px;
   color: $white;
 
@@ -101,13 +102,13 @@ $white: #fff;
   width: 100%;
 }
 
-@media(max-width: 1050px) {
+@media (max-width: 1050px) {
   .containerCountry {
     max-height: 755px;
   }
 }
 
-@media(max-width: 700px) {
+@media (max-width: 700px) {
   .containerCountry {
     max-height: 400px;
   }
