--- a/src/components/MainList/MainList.module.scss
+++ b/src/components/MainList/MainList.module.scss
@@ -27,8 +27,8 @@ $white: #fff;
 .containerCountry {
   overflow: hidden;
   overflow-y: scroll;
-  height: calc(100% - 115px);
-  max-height: 630px;
+  height: calc(100vh - 250px);
+  // max-height: 550px;
   color: $white;
 
   .item {
