fix: style table

--- a/src/components/MainTable/MainTable.module.scss
+++ b/src/components/MainTable/MainTable.module.scss
@@ -25,11 +25,13 @@ $font-color: white;
 .table_label {
   font-size: 1.6rem;
   text-align: center;
+  margin: 1.2rem 0;
 }
 
 .table_data {
   font-size: 2rem;
   text-align: center;
+  margin: 1.3rem 0;
 }
 
 .table_section {
